fixed navigationbar overlapped content

--- a/css/style.css
+++ b/css/style.css
@@ -51,8 +51,10 @@ body {
 }
 
 .box-around-section {
-    margin-top: 40px;
-    margin-bottom: 40px;
+/*    margin-top: 40px;
+    margin-bottom: 40px;*/
+    padding-top: 5vw;
+    padding-bottom: 5vw;
 }
 
 h2 {
